fix: Update vercel.json to use rewrites instead of routes
- Removed deprecated 'routes' field
- Added modern 'rewrites' configuration
- This fixes the Vercel deployment error

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,15 @@
 {
   "version": 2,
-  "name": "gift-exchange",
   "builds": [
     {
       "src": "**/*",
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/.*",
-      "dest": "/index.html"
+      "source": "/((?!api/).*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
